[WIP][FIX] Change currency api type
